
  This tactic runs the search command with a given search witness. To see
  these witnesses, run any of the other search forms with:

       Set witnesses on.

  The witness string that is printed can then be used to replay the exact
  same search. There is no backtracking involved with witness strings.
  Hence, the replay will tend to be a lot faster.

  Witnesses have the following grammar:

       witness ::= true | left(witness) | right(witness)
                 | splut(witness,witness)
                 | apply(hyp)
                 | intros[id1, ..., idn](witness)
                 | exists[id1=term1, ..., idn=termn](witness)
                 | unfold(id,n,witness1,...,witnessn)
                 | (witness)
                 | *

  The last witness form stands for a place-holder so you can give partial
  witnesses to search. In fact, the default search tactic is identical to:

       search with *.

  Please use this feature sparingly, and only when building proofs. After
  you are done with the proof, delete the "with" statements. These witnesses
  will NOT be portable across different versions of Abella, as they are very
  particular to the "search" tactic implementation.


Bugfixes

* Annotation mode (-a) output is no longer printed in other modes


Changes in 2.0.3 from 2.0.2
---------------------------

Potentially breaking changes

* Removed ~ and != notations (introduced in 2.0.2, and unused by anyone as
  far as I know). A general notation support may be considered for Abella
  in the future. Meanwhile, we prefer simplicity and predictability.


Additions

* The unfold tactic has an optional argument, "(all)", that produces a
  disjunction of all solutions to the matching problem of the conclusion of
  a subgoal and its relevant (co)definition. The disjuncts are produced in
  the same order as the clauses, but if a single clause has multiple ways to
  match the head then the disjuncts for that clause are in some unspecified